# golden-repo

./: .coderabbit.yaml  .cursorrules  .env.example  .env.required  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.prod  GUARDRAILS.md  IMPLEMENTATION_NOTE.md  IMPLEMENTATION_NOTE_CI.md  IMPLEMENTATION_NOTE_HARDEN.md  IMPLEMENTATION_NOTE_PRINCIPAL_ID.md  LICENSE  Makefile  PACK_SUMMARY.md  README.md  README_FOLLOW_ON.md  SECURITY.md  SKILL.md  TESTING.md  architecture.yaml  llms-full.txt  llms.txt  pyproject.toml  requirements.txt  sonar-project.properties  spec.yaml
.github/: CODEOWNERS  README.md  pull_request_template.md
app/: __init__.py  config.py  contract_registry.py  errors.py  health.py  main.py  observability.py  preflight.py
chassis/: README.md  __init__.py  action_registry.py  actions.py  app.py  audit.py  chassis_app.py  contract_enforcement.py  gate_client.py  health.py  idempotency.py  logging.py  packet_envelope.py  router.py  security.py  tenant_context.py  types.py
client/: README.md  auth.py  execute_client.py  packet_builder.py  request_models.py  response_parser.py
contracts/: HEALTHCHECK_READINESS_SPEC.md  README.md  conformance_checklist.md  conformant_node_contract.yaml  node_registration_contract.yaml  packet_envelope_v1.yaml
database/: __init__.py  init_db.py  schema.sql
deploy/: README.md
docs/: README.md  REVIEW_SYSTEM.md  SKILL.md  SPEC_DRIVEN_DEVELOPMENT.md  curl_examples.md
domains/: README.md
engine/: README.md  __init__.py  features.py  handlers.py  main.py  settings.py
examples/: postman_collection.json
infrastructure/: README.md
observability/: README.md
(+217 files in other folders)
