[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "l9-golden-microservice-repo"
version = "1.0.0"
description = "Golden template for L9 PacketEnvelope microservices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=43.0,<44.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "prometheus-client>=0.21,<1.0",
  "pydantic>=2.8,<3.0",
  "python-json-logger>=2.0,<3.0",
  "pyyaml>=6.0,<7.0",
  "uvicorn>=0.32,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.8,<1.0",
  "mypy>=1.13,<2.0"
]
