[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l9-chassis"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.7.0",
    "PyYAML>=6.0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
